--- a/src/footer.html
+++ b/src/footer.html
@@ -1,3 +1,87 @@
-<footer class="footer">     
+<footer class="footer">
+    <div class="yellow">
+        <div class="container yellow__footer">
+            <div class="yellow__row">
+                <div class="footer__tel">
+                    <div class="footer__icon"><i class="bi bi-geo-alt-fill"></i></div>
+                    <div class="contus">
+                        <div class="contus__text">Address</div>
+                        <div class="contus__tel">123 5th Avenue, New York, US</div>
+                    </div>
+                </div>
+            </div>
+            <div class="int"></div>
+            <div class=" yellow__row">
+                <div class="footer__tel">
+                    <div class="footer__icon" style="transform: rotate(270deg); padding-left: 20px; padding-top: 10px;">
+                        <i class="bi bi-telephone-fill"></i></div>
+                    <div class="contus">
+                        <div class="contus__text">Call Us
+                        </div>
+                        <div class="contus__tel">+1 123 456 7890</div>
+                    </div>
+                </div>
+            </div>
+            <div class="int"></div>
+            <div class=" yellow__row">
+                <div class="footer__tel">
+                    <div class="footer__icon"><i class="bi bi-envelope-fill"></i></div>
+                    <div class="contus">
+                        <div class="contus__text">Email Us
+                        </div>
+                        <div class="contus__tel">info@example.com</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container ">
+        <div class="footer__bottom">
+            <div class="footer__row"><input type="text" class="header__input">
+                <div class="text">Our team is led by several chief engineers, composed of a large number of researchers
+                    absorbed in their work in our comprehensive laboratory, which is also a renowned medical equipment
+                    testing center in Hong Kong.</div>
+            </div>
+            <div class="footer__row">
+                <div class="footer__tittle">Company</div>
+                <nav class="footer__menu">
+                    <ul class="footer__list">
+                        <li class="menu__list-item"><a href="#Home" class="menu__list-link active-footer">Home</a></li>
 
+                        <li class="menu__list-item"><a href="#About" class="menu__list-link">About</a></li>
+
+                        <li class="menu__list-item"><a href="#Product" class="menu__list-link">Product</a></li>
+
+                        <li class="menu__list-item"><a href="#Contact" class="menu__list-link">Contact</a></li>
+
+                        <li class="menu__list-item"><a href="#History" class="menu__list-link">History</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer__row">
+                <div class="footer__tittle">Follow Us</div>
+                <div class="soc">
+                    <div class="soc__icon"><i class="bi bi-facebook"></i></div>
+                    <div class="soc__name">Facebook</div>
+                </div>
+                <div class="soc">
+                    <div class="soc__icon"><i class="bi bi-twitter"></i></div>
+                    <div class="soc__name">Twitter</div>
+                </div>
+                <div class="soc">
+                    <div class="soc__icon"><i class="bi bi-google"></i></div>
+                    <div class="soc__name">Google +</div>
+                </div>
+                <div class="soc">
+                    <div class="soc__icon"><i class="bi bi-youtube"></i></div>
+                    <div class="soc__name">YouTube</div>
+                </div>
+                <div class="soc">
+                    <div class="soc__icon"><i class="bi bi-linkedin"></i></div>
+                    <div class="soc__name">Linkedin</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">Copyright © 2020 N95</div>
 </footer>
