--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <div class="bg"><img src="../img/bg_protect.png" alt=""></div>
+    @@include('bg.html')
     <div class="container">
+
     @@include('header.html')    
     
 </div>
@@ -28,8 +29,6 @@
         </div>
         @@include('footer.html')
     </div>
-
-    <script src="js/script.min.js"></script>
 </body>
 
 </html>
