--- a/src/protect.html
+++ b/src/protect.html
@@ -11,7 +11,7 @@
             <div class="btn__accent btn">Learn more</div>
         </div>
     </div>
-    <div class="protect__phссвoto photo"><img src="../img/protect.jpg" alt=""></div>
+    <div class="protect__photo photo"><img src="../img/protect.jpg" alt=""></div>
 </div>
 <div class="blocks">
     <div class="block">
