--- a/src/respirators.html
+++ b/src/respirators.html
@@ -5,14 +5,14 @@
             <div class="block__right">
                 <div class="block__right-tittle">N95 Respirators</div>
                 <div class="block__right-text">
-                    The N95 mask is a form of respiratory protective wear worn over the nose and mouth to help
+                    <span>The N95 mask</span> is a form of respiratory protective wear worn over the nose and mouth to help
                     minimise the chance of inhaling airborne particles like viruses and other germs. It is a
                     disposable mask made from synthetic polymer fibres produced in a highly specialised process
                     called melt blowing. During this process, the inner layer of the N95 mask is created which forms
-                    the filtration layer capable of filtering out at least 95% of airborne particles when worn
+                    the filtration layer capable of filtering out at <span>least 95%</b> of airborne particles when worn
                     correctly.
                     <br><br>During outbreaks of respiratory illnesses and during periods of intense air pollution,
-                    wearing N95 masks has been shown to help reduce the inhalation of compromised air, filtering
+                    wearing <span>N95 masks</b> has been shown to help reduce the inhalation of compromised air, filtering
                     out nasty pathogens which lead to illness or which can aggravate existing respiratory
                     problems. Maintaining clear and unhindered respiration is vitally important for remaining
                     fit and healthy and people with pre-existing conditions or respiratory fragility can
@@ -26,7 +26,7 @@
             <div class="block__right el1">
                 <div class="block__right-tittle">N95 Respirators In Industrial And Health Care Settings</div>
                 <div class="block__right-text">
-                    Most N95 respirators are manufactured for use in construction and other industrial type jobs that
+                    Most <span>N95 respirators</b> are manufactured for use in construction and other industrial type jobs that
                     expose workers to dust and small particles. They are regulated by the National Personal
                     Protective Technology Laboratory (NPPTL) in the National Institute for Occupational Safety and
                     Health (NIOSH), which is part of the Centers for Disease Control and Prevention (CDC).
