--- a/src/footer.html
+++ b/src/footer.html
@@ -13,7 +13,7 @@
             <div class="int"></div>
             <div class=" yellow__row">
                 <div class="footer__tel">
-                    <div class="footer__icon" style="transform: rotate(270deg); padding-left: 20px; padding-top: 10px;">
+                    <div class="footer__icon" style="transform: rotate(270deg); padding-left: 10px; ">
                         <i class="bi bi-telephone-fill"></i></div>
                     <div class="contus">
                         <div class="contus__text">Call Us
@@ -47,13 +47,9 @@
                 <nav class="footer__menu">
                     <ul class="footer__list">
                         <li class="menu__list-item"><a href="#Home" class="menu__list-link active-footer">Home</a></li>
-
                         <li class="menu__list-item"><a href="#About" class="menu__list-link">About</a></li>
-
                         <li class="menu__list-item"><a href="#Product" class="menu__list-link">Product</a></li>
-
                         <li class="menu__list-item"><a href="#Contact" class="menu__list-link">Contact</a></li>
-
                         <li class="menu__list-item"><a href="#History" class="menu__list-link">History</a></li>
                     </ul>
                 </nav>
