--- a/src/header.html
+++ b/src/header.html
@@ -3,15 +3,11 @@
         <input type="text" class="header__input">
         <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__list-item"><a href="#Home" class="menu__list-link active">Home</a></li>
-
-                <li class="menu__list-item"><a href="#About" class="menu__list-link">About</a></li>
-
-                <li class="menu__list-item"><a href="#Product" class="menu__list-link">Product</a></li>
-
-                <li class="menu__list-item"><a href="#Contact" class="menu__list-link">Contact</a></li>
-
-                <li class="menu__list-item"><a href="#History" class="menu__list-link">History</a></li>
+                <li class="menu__list-item"><a href="#" class="menu__list-link active">Home</a></li>
+                <li class="menu__list-item"><a href="#" class="menu__list-link">About</a></li>
+                <li class="menu__list-item"><a href="#" class="menu__list-link">Product</a></li>
+                <li class="menu__list-item"><a href="#" class="menu__list-link">Contact</a></li>
+                <li class="menu__list-item"><a href="#" class="menu__list-link">History</a></li>
             </ul>
             <button class="menu__btn btn">Contact us</button>
         </nav>
