--- a/src/protect.html
+++ b/src/protect.html
@@ -1,43 +1,53 @@
 <selector class="protect">
     <div class="protect__main">
-    <div class="protect__text">
-        <div class="accent">3M N95 masks</div>
-        <h1 class="title">Protective Face Masks
-        </h1>
-        <div class="text">We offer the fast delivery wholesale selection of N95 masks and surgical masks, featuring FDA-approved quality and 2 – 5 days delivery, our wholesale face masks are ideal for influenza or novel coronavirus prevention.
+        <div class="protect__text">
+            <div class="accent">3M N95 masks</div>
+            <h1 class="title">Protective Face Masks
+            </h1>
+            <div class="text">We offer the fast delivery wholesale selection of N95 masks and surgical masks, featuring FDA-approved quality and 2 – 5 days delivery, our wholesale face masks are ideal for influenza or novel coronavirus prevention.
+            </div>
+            <div class="protect__btns">
+                <div class="btn__blue btn">Shop now</div>
+                <div class="btn__accent btn">Learn more</div>
+            </div>
         </div>
-        <div class="protect__btns">
-            <div class="btn__blue btn">Shop now</div>
-            <div class="btn__accent btn">Learn more</div>
+        <div class="protect__photo photo"><img src="../img/protect.jpg" alt=""></div>
+    </div>
+    <div class="blocks">
+        <div class="block">
+            <div class="block__img"><img src="../img/icons/box.png" alt=""></div>
+            <div class="block__row">
+                <div class="block__title">Full-Service Shipping
+                </div>
+                <div class="block__text">From picking to custom-crating to domestic and international shipping, we handle it all for you.</div>
+            </div>
+        </div>
+        <div class="block">
+            <div class="block__img"><img src="../img/icons/shield.png" alt=""></div>
+            <div class="block__row">
+                <div class="block__title">Multi-Point Inspection
+                </div>
+                <div class="block__text">To ensure quality, our team of HTM professionals fully assess and evaluate all equipment.
+                </div>
+            </div>
+        </div>
+        <div class="block">
+            <div class="block__img"><img src="../img/icons/pers.png" alt=""></div>
+            <div class="block__row">
+                <div class="block__title">Professional Product Support
+                </div>
+                <div class="block__text">If you have any questions about the equipment, our product specialists are here
+                    to help.</div>
+            </div>
+        </div>
+        <div class="block">
+            <div class="block__img"><img src="../img/icons/cards.png" alt=""></div>
+            <div class="block__row">
+                <div class="block__title">Secure and Easy Payment Methods</div>
+                <div class="block__text">Pay your way, whether by credit card, PayPal or the redemption of earned
+                    credits.
+                </div>
+            </div>
         </div>
     </div>
-    <div class="protect__photo photo"><img src="../img/protect.jpg" alt=""></div>
-</div>
-<div class="blocks">
-    <div class="block">
-                <div class="block__img"><img src="../img/icons/box.png" alt=""></div>
-        <div class="block__row"><div class="block__title">Full-Service Shipping
-        </div>
-        <div class="block__text">From picking to custom-crating to domestic and international shipping, we handle it all for you.</div>
-    </div></div>
-    <div class="block">
-                <div class="block__img"><img src="../img/icons/shield.png" alt=""></div>
-        <div class="block__row"><div class="block__title">Multi-Point Inspection
-        </div>
-        <div class="block__text">To ensure quality, our team of HTM professionals fully assess and evaluate all equipment.
-        </div></div>
-    </div>
-    <div class="block">
-                <div class="block__img"><img src="../img/icons/pers.png" alt=""></div>
-        <div class="block__row"><div class="block__title">Professional Product Support
-        </div>
-        <div class="block__text">If you have any questions about the equipment, our product specialists are here to help.</div>
-    </div></div>
-    <div class="block">
-                <div class="block__img"><img src="../img/icons/cards.png" alt=""></div>
-                        <div class="block__row"><div class="block__title">Secure and Easy Payment Methods</div>
-        <div class="block__text">Pay your way, whether by credit card, PayPal or the redemption of earned credits.
-        </div></div>
-    </div>
-</div>
 </selector>
