--- a/src/comments.html
+++ b/src/comments.html
@@ -1,10 +1,13 @@
 <selector class="comments">
     <div class="comments__body">
         <div class="comments__top">
-            <div class="comments__top-stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
+            <div class="comments__top-stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                    class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
             <div class="comments__top-soc"><i class="bi bi-meta"></i></div>
         </div>
-        <div class="comments__text">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam iste asperiores explicabo vel quas corrupti veniam ad deserunt quo, excepturi, quidem eaque placeat dolor culpa iusto officia quia laudantium atque."</div>
+        <div class="comments__text">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam iste asperiores
+            explicabo vel quas corrupti veniam ad deserunt quo, excepturi, quidem eaque placeat dolor culpa iusto
+            officia quia laudantium atque."</div>
         <div class="comments__contact">
             <div class="comments__contact-photo"><img src="../img/who2.jpg" alt=""></div>
             <div class="comments__contact-who">
@@ -15,10 +18,14 @@
     </div>
     <div class="comments__body">
         <div class="comments__top">
-            <div class="comments__top-stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
+            <div class="comments__top-stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                    class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
             <div class="comments__top-soc"><i class="bi bi-google"></i></div>
         </div>
-        <div class="comments__text">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, tempore? Voluptates, error vitae ex corrupti, similique beatae impedit quo ipsum quia dignissimos modi voluptatibus? Similique, ea amet architecto ad modi cumque vitae ratione ab accusantium sequi nihil. Inventore, quae suscipit?"</div>
+        <div class="comments__text">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, tempore?
+            Voluptates, error vitae ex corrupti, similique beatae impedit quo ipsum quia dignissimos modi voluptatibus?
+            Similique, ea amet architecto ad modi cumque vitae ratione ab accusantium sequi nihil. Inventore, quae
+            suscipit?"</div>
         <div class="comments__contact">
             <div class="comments__contact-photo"><img src="../img/who3.jpg" alt=""></div>
             <div class="comments__contact-who">
@@ -29,7 +36,8 @@
     </div>
     <div class="comments__body">
         <div class="comments__top">
-            <div class="comments__top-stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
+            <div class="comments__top-stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                    class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
             <div class="comments__top-soc"><i class="bi bi-facebook"></i></div>
         </div>
         <div class="comments__text">"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, ab?"</div>
