--- a/src/respirators.html
+++ b/src/respirators.html
@@ -5,19 +5,21 @@
             <div class="block__right">
                 <div class="block__right-tittle">N95 Respirators</div>
                 <div class="block__right-text">
-                    <span>The N95 mask</span> is a form of respiratory protective wear worn over the nose and mouth to help
+                    <span>The N95 mask</span> is a form of respiratory protective wear worn over the nose and mouth to
+                    help
                     minimise the chance of inhaling airborne particles like viruses and other germs. It is a
                     disposable mask made from synthetic polymer fibres produced in a highly specialised process
                     called melt blowing. During this process, the inner layer of the N95 mask is created which forms
-                    the filtration layer capable of filtering out at <span>least 95%</b> of airborne particles when worn
-                    correctly.
-                    <br><br>During outbreaks of respiratory illnesses and during periods of intense air pollution,
-                    wearing <span>N95 masks</b> has been shown to help reduce the inhalation of compromised air, filtering
-                    out nasty pathogens which lead to illness or which can aggravate existing respiratory
-                    problems. Maintaining clear and unhindered respiration is vitally important for remaining
-                    fit and healthy and people with pre-existing conditions or respiratory fragility can
-                    particularly benefit from wearing face masks while they are out in public and unable to
-                    control the breathing environments that they find themselves in.
+                    the filtration layer capable of filtering out at <span>least 95%</span> of airborne particles when worn
+                        correctly.
+                        <br><br>During outbreaks of respiratory illnesses and during periods of intense air pollution,
+                        wearing <span>N95 masks</span> has been shown to help reduce the inhalation of compromised air,
+                            filtering
+                            out nasty pathogens which lead to illness or which can aggravate existing respiratory
+                            problems. Maintaining clear and unhindered respiration is vitally important for remaining
+                            fit and healthy and people with pre-existing conditions or respiratory fragility can
+                            particularly benefit from wearing face masks while they are out in public and unable to
+                            control the breathing environments that they find themselves in.
                 </div>
             </div>
         </div>
@@ -26,16 +28,18 @@
             <div class="block__right el1">
                 <div class="block__right-tittle">N95 Respirators In Industrial And Health Care Settings</div>
                 <div class="block__right-text">
-                    Most <span>N95 respirators</b> are manufactured for use in construction and other industrial type jobs that
-                    expose workers to dust and small particles. They are regulated by the National Personal
-                    Protective Technology Laboratory (NPPTL) in the National Institute for Occupational Safety and
-                    Health (NIOSH), which is part of the Centers for Disease Control and Prevention (CDC).
-                    <br><br>However, some N95 respirators are intended for use in a health care setting. Specifically,
-                    single-use, disposable respiratory protective devices used and worn by health care personnel
-                    during procedures to protect both the patient and health care personnel from the transfer of
-                    microorganisms, body fluids, and particulate material. These surgical N95 respirators are
-                    class II devices regulated by the FDA, under 21 CFR 878.4040, and CDC NIOSH under 42 CFR
-                    Part 84.
+                    Most <span>N95 respirators</span> are manufactured for use in construction and other industrial type
+                        jobs that
+                        expose workers to dust and small particles. They are regulated by the National Personal
+                        Protective Technology Laboratory (NPPTL) in the National Institute for Occupational Safety and
+                        Health (NIOSH), which is part of the Centers for Disease Control and Prevention (CDC).
+                        <br><br>However, some N95 respirators are intended for use in a health care setting.
+                        Specifically,
+                        single-use, disposable respiratory protective devices used and worn by health care personnel
+                        during procedures to protect both the patient and health care personnel from the transfer of
+                        microorganisms, body fluids, and particulate material. These surgical N95 respirators are
+                        class II devices regulated by the FDA, under 21 CFR 878.4040, and CDC NIOSH under 42 CFR
+                        Part 84.
                 </div>
             </div>
         </div>
