--- a/src/shopping.html
+++ b/src/shopping.html
@@ -1,7 +1,8 @@
 <selector class="shopping">
     <div class="shopping__tittle">Get One Step Ahead Of Disease
     </div>
-    <div class="shopping__text">Imperdiet aliquet est vel nulla turpis eu consequat ullamcorper a egestas suspendisse faucibus eu velit, phasellus pulvinar lorem et libero et tortor, sapien nulla.
+    <div class="shopping__text">Imperdiet aliquet est vel nulla turpis eu consequat ullamcorper a egestas suspendisse
+        faucibus eu velit, phasellus pulvinar lorem et libero et tortor, sapien nulla.
     </div>
     <button class="btn menu__btn">Shop now</button>
 </selector>
